--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,8 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports: 
+    collapse,
+    pbapply,
     sf
 Suggests: 
     stringr
